# oxidate

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: .gitkeep
docs/learning/: .template.md  00-setup.md  01-linter-and-formatter.md  02-ci-setup.md  03-first-functions.md  04-writing-get-csv-schema.md  05-splitting-up-main-rs.md  06-write-csv-head.md
src/: csv_ops.rs  lib.rs  main.rs  schema.rs
test_data/: sample.csv
